--- a/CoreDemo/Views/Blog/Index.cshtml
+++ b/CoreDemo/Views/Blog/Index.cshtml
@@ -23,7 +23,7 @@
                                 <ul class="blog-icons my-4">
                                     <li>
                                         <a href="#">
-                                            <i class="far fa-calendar-alt"></i> @item.BlogCreateDate
+                                            <i class="far fa-calendar-alt"></i> @(((DateTime)item.BlogCreateDate).ToString("dd-MMM-yyyy"))
                                         </a>
                                     </li>
                                     <li class="mx-2">
@@ -39,10 +39,13 @@
 
                                 </ul>
                                 <h5 class="card-title">
-                                    <a href="single.html">@item.BlogTitle</a>
+                                    <a href="/Blog/BlogReadAll/@item.BlogID">@item.BlogTitle</a>
                                 </h5>
-                                <p class="card-text mb-3">@item.BlogContent.. </p>
-                                <a href="single.html" class="btn btn-primary read-m">Devamını Oku</a>
+                                <p class="card-text mb-3">@item.BlogContent.Substring(0, item.BlogContent.Substring(0, 20).LastIndexOf(" "))... </p>
+                                @*0 dan item.BlogContent içindeki alanda son indexdeki boşluğa kadar al.Örnek : item.BlogContent.Substring(0, 120).LastIndexOf(" ")
+                              Sonra bu değeride 0 dan bu değere kadar al.Örnek :item.BlogContent.Substring(0, item.BlogContent.Substring(0, 120).LastIndexOf(" "))*@
+
+                                <a href="/Blog/BlogReadAll/@item.BlogID" class="btn btn-primary read-m">Devamını Oku</a>
                             </div>
                         </div>
                     }
