--- a/CoreDemo/Views/Blog/BlogReadAll.cshtml
+++ b/CoreDemo/Views/Blog/BlogReadAll.cshtml
@@ -65,8 +65,9 @@
                             <a href="/Blog/Index" class="btn btn-primary read-m">Blog Listesi</a>
                         </div>
                     }
+                @*<h1>@ViewBag.i</h1>*@
 
-                    @await Component.InvokeAsync("CommentList")
+                    @await Component.InvokeAsync("CommentListByBlog", new  {id=ViewBag.i })@*Parametre göndermek için BlogControllerda Viewbag ile i yi aldık sonra burda kullandık  i''yi.*@
                     @*@await Html.PartialAsync("~/Views/Comment/CommentListByBlog.cshtml")*@ @*Partial view i bu şekildede yapabiliriz.
         Eğer böyle çağırmak istiyorsak shared altında partial view olusturmak yerine ilgili
         controllerda dönüş değeri PartialViewResult olan bir metod(CommentListByBlog) olusturup  ve view ini olusturup
@@ -90,30 +91,15 @@
                             </form>
 
                         </div>
+
+                        @await Component.InvokeAsync("CategoryList")
                         <div class="tech-btm">
-                            <h4>Categories</h4>
-                            <ul class="list-group single">
-                                <li class="list-group-item d-flex justify-content-between align-items-center">
-                                    Cras justo odio
-                                    <span class="badge badge-primary badge-pill">14</span>
-                                </li>
-                                <li class="list-group-item d-flex justify-content-between align-items-center">
-                                    Dapibus ac facilisis in
-                                    <span class="badge badge-primary badge-pill">2</span>
-                                </li>
-                                <li class="list-group-item d-flex justify-content-between align-items-center">
-                                    Morbi leo risus
-                                    <span class="badge badge-primary badge-pill">1</span>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="tech-btm">
-                            <h4>Top stories of the week</h4>
+                            <h4>Yazarın Diğer Yazıları</h4>
 
                             <div class="blog-grids row mb-3">
                                 <div class="col-md-5 blog-grid-left">
                                     <a href="single.html">
-                                        <img src="images/1.jpg" class="img-fluid" alt="">
+                                        <img src="~/CoreBlogTema/images/1.jpg" class="img-fluid" alt="">
                                     </a>
                                 </div>
                                 <div class="col-md-7 blog-grid-right">
@@ -132,7 +118,7 @@
                             <div class="blog-grids row mb-3">
                                 <div class="col-md-5 blog-grid-left">
                                     <a href="single.html">
-                                        <img src="images/6.jpg" class="img-fluid" alt="">
+                                        <img src="~/CoreBlogTema/images/6.jpg" class="img-fluid" alt="">
                                     </a>
                                 </div>
                                 <div class="col-md-7 blog-grid-right">
@@ -172,11 +158,11 @@
                             </div>
                         </div>
                         <div class="single-gd tech-btm">
-                            <h4>Recent Post</h4>
+                            <h4>Son Eklenen Post</h4>
                             <div class="blog-grids">
                                 <div class="blog-grid-left">
                                     <a href="single.html">
-                                        <img src="images/b1.jpg" class="img-fluid" alt="">
+                                        <img src="~/CoreBlogTema/images/b1.jpg" class="img-fluid" alt="">
                                     </a>
                                 </div>
                                 <div class="blog-grid-right">
