--- a/CoreDemo/Views/Blog/BlogReadAll.cshtml
+++ b/CoreDemo/Views/Blog/BlogReadAll.cshtml
@@ -92,6 +92,11 @@
                         <div class="single-gd my-5 tech-btm">
                             <h4>Our Progress</h4>
                             <div class="progress">
+
+
+
+                                30
+                                for
                                 <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0"
                                      aria-valuemax="100"></div>
                             </div>
