--- a/CoreDemo/Views/Blog/BlogAdd.cshtml
+++ b/CoreDemo/Views/Blog/BlogAdd.cshtml
@@ -25,7 +25,8 @@
     <br />
 
     @Html.Label("Kategori")
-    @Html.TextBoxFor(x=>x.CategoryID,new {@class="form-control"})
+    @Html.DropDownListFor(x=>x.CategoryID,(List<SelectListItem>)ViewBag.cv,new {@class="form-control"})
+                //CategoryId için çalısıcaz değerini liste formatında controllerdaki viewbag ile taşıcaz
     <br />
 
     @Html.Label("Blog İçeriği")
