--- a/CoreDemo/Views/Writer/WriterEditProfile.cshtml
+++ b/CoreDemo/Views/Writer/WriterEditProfile.cshtml
@@ -27,7 +27,7 @@
                         <label for="exampleInputPassword4">Şifre</label>
                         @Html.PasswordFor(x=>x.WriterPassword,new {@class="form-control"})
                       </div>
-                      <div class="form-group">
+                      <div class="form-W">
                         <label>Yazar Görsel</label>
                         <input type="file" name="img[]" class="file-upload-default">
                         <div class="input-group col-xs-12">
